--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><script src="mapur.js"></script><script type="text/javascript" src="jscolor/jscolor.js"></script>
+<!DOCTYPE html><title>Map Ur Js</title><script src="mapur.js"></script><script type="text/javascript" src="jscolor/jscolor.js"></script>
